# dsem-agent

./: .env.example  .gitignore  .renvignore  .repomixignore  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  ci.py  config.yaml  package.json  profile_gpu.py  pyproject.toml  turbo.json
apps/data-pipeline/: .env.example  AGENTS.md  config.yaml  package.json  pyproject.toml
apps/data-pipeline/benchmarks/: metrics.py  modal_infra.py  results.md  run.py
apps/data-pipeline/evals/: __init__.py  common.py  config.yaml  eval1a_latent_model.py  eval1b_measurement_model.py  eval2_worker_extraction.py  eval3_worker_measurement_adherence.py  eval4_aggregation_robustness.py  eval5_functional_spec.py
apps/data-pipeline/notebooks/: frontdoor_pymc_demo.ipynb  hessmc2_profiling.ipynb  hessmc2_scaling.ipynb
apps/data-pipeline/scripts/: export_schemas.py
apps/data-pipeline/tests/: conftest.py  helpers.py  test_aggregations.py  test_benchmark_identifiability.py  test_block_rb.py  test_config.py  test_counterfactual.py  test_dag_to_ssm.py  test_e2e_discretization.py  test_e2e_pipeline.py  test_emissions.py  test_identifiability.py  test_imports.py  test_inference_diagnostics.py  test_inference_strategies.py  test_latex_renderer.py  test_new_methods.py  test_posterior_predictive.py  test_rao_blackwell.py  test_recovery.py  test_schemas.py  test_scoring.py  test_ssm.py  test_stage0_preprocess.py  test_stage1b.py  test_stage3_validation.py  test_stage4.py  test_stage_contracts.py  test_two_level_rb.py
apps/data-pipeline/tools/: ci.py  commons.py  dag_cli.py  dag_diagnostics.py  dag_explorer.py  debug_lgss.py  model_inspector.py  profile_gpu.py  read_eval_log.py
apps/web/: next.config.ts  package.json  tsconfig.json
benchmarks/: modal_infra.py  run.py
benchmarks/problems/: four_latent.py  three_latent_robust.py
data/eval/: dsem_model1.json  dsem_model2.json  dsem_model3.json  dsem_model4.json  dsem_model5.json  example_dag1.json  example_dag2.json  example_dag3.json  example_dag4.json  example_dag5.json  latent_model1.json  latent_model2.json  latent_model3.json  latent_model4.json  latent_model5.json  structural_model1.json  structural_model2.json  structural_model3.json  structural_model4.json  structural_model5.json
data/queries/: music-mood.txt  travel-planning-mood.txt  weekend-searches.txt
data/test-queries/: procrastination-patterns.txt
data/training/: orchestrator_eval_questions.json  structure_examples.jsonl
docs/: codegen.md  dsem_spec.md  index.md
docs/guides/: data_workflow.md  exa.md  inspect.md  prefect.md  prompting.md  quickstart.md  running_evals.md
docs/modeling/: assumptions.md  dsem_overview.md  estimation.md  functional_spec.md  inference-strategies.md  scope.md  theory.md
docs/reference/: dsem-parity.md  pipeline.md  schema.md
docs/theory/: method_results.md
evals/: common.py  config.yaml  eval1_orchestrator_structure.py  eval1a_latent_model.py  eval1b_measurement_model.py  eval2_worker_extraction.py  eval3_worker_measurement_adherence.py  eval4_aggregation_robustness.py  eval5_functional_spec.py  eval5_worker_dimension_proposals.py  eval5_worker_indicator_proposals.py  orchestrator_structure.py  worker_extraction.py
evals/deprecated/: eval5_prior_elicitation.py  eval5_worker_indicator_proposals.py
evals/scripts/: preprocess_google_takeout.py  run_parallel_evals.py  sample_data_chunks.py
notebooks/: hessmc2_profiling.ipynb  hessmc2_scaling.ipynb
scripts/: optimize_structure_prompt.py  optimize_structure_proposer.py  preprocess_google_takeout.py  sample_data_chunks.py
tests/: conftest.py  helpers.py  test_aggregations.py  test_benchmark_identifiability.py  test_block_rb.py  test_counterfactual.py  test_ctsem.py  test_dag_to_ssm.py  test_e2e_pipeline.py  test_identifiability.py  test_identifiability_exhaustive.py  test_imports.py  test_inference_strategies.py  test_new_methods.py  test_parametric_id.py  test_posterior_predictive.py  test_rao_blackwell.py  test_recovery.py  test_schemas.py  test_scoring.py  test_ssm.py  test_stage1b.py  test_stage3_validation.py  test_stage4.py  test_strategy_selector.py  test_two_level_rb.py
tools/: commons.py  dag_diagnostics.py  dag_explorer.py  dag_visualizer.html  debug_lgss.py  model_inspector.py  profile_gpu.py  recovery.py  recovery_hessmc2.py
tools/utils/: latex_renderer.py
(+368 files in other folders)
