[project]
name = "dsem-agent"
version = "0.1.0"
description = "LLM-orchestrated causal inference over long-context, multi-source data"
readme = "README.md"
authors = [
    { name = "ma9o", email = "magogagiovanni@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.14",
    "google-genai>=1.56.0",
    "inspect-ai>=0.3.162",
    "networkx>=3.6",
    "openai>=2.9.0",
    "polars>=1.35.2",
    "prefect>=3.6.5",
    "pymc>=5.27.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "streamlit>=1.52.2",
    "streamlit-agraph>=0.0.45",
    "watchdog>=6.0.0",
    "dspy>=3.0.4",
]
