[project]
name = "dsem-agent"
version = "0.1.0"
description = "LLM-orchestrated causal inference over long-context, multi-source data"
readme = "README.md"
authors = [
    { name = "ma9o", email = "magogagiovanni@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "exa-py>=1.0.0",
    "google-genai>=1.56.0",
    "inspect-ai>=0.3.162",
    "networkx>=3.6",
    "openai>=2.9.0",
    "polars>=1.35.2",
    "prefect>=3.6.5",
    "pymc>=5.27.0",
    "pymc-extras>=0.7.0",
    "python-dotenv>=1.2.1",
    "y0 @ git+https://github.com/y0-causal-inference/y0.git",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "streamlit>=1.52.2",
    "streamlit-agraph>=0.0.45",
    "watchdog>=6.0.0",
    "dspy>=3.0.4",
]
